feat: Add search form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
         <h1 class="hero__heading">Encuentra o crea un grupo para compartir lo que más te gusta</h1>
         <a href="#" class="hero__enlace">Obtener una cuenta</a>
     </section>
+
+    <section class="busqueda">
+        <h1 class="busqueda__heading">Busca un grupo en tu ciudad</h1>
+
+        <div class="contenedor">
+            <form class="formulario">
+                <select id="" class="formulario__campo">
+                    <option>Programación</option>
+                    <option>Diseño</option>
+                    <option>Negocios</option>
+                    <option>Moda</option>
+                    <option>Ejercicios y Salud</option>
+                    <option>Fotografía</option>
+                    <option>Comida</option>
+                    <option>Diseño interior</option>
+                    <option>Café</option>
+                    <option>Cine</option>
+                    <option>Libros</option>
+                    <option>Emprendimiento</option>
+                </select>
+                <input type="text" class="formulario__campo" placeholder="Nombre del evento">
+                <input type="text" class="formulario__campo" placeholder="Ciudad o País">
+                <input type="submit" class="formulario__submit" value="Buscar">
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
