feat: Add next events

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="busqueda">
-        <h1 class="busqueda__heading">Busca un grupo en tu ciudad</h1>
+        <h2 class="busqueda__heading">Busca un grupo en tu ciudad</h2>
 
         <div class="contenedor">
             <form class="formulario">
@@ -53,6 +53,76 @@
             </form>
         </div>
     </section>
+
+    <main class="eventos contenedor">
+        <h2 class="eventos__heading">Próximos eventos</h2>
+
+        <div class="eventos__grid">
+            <div class="evento">
+                <a href="meeti.html">
+                    <img src="build/img/imagen1.jpg" alt="Imagen del evento" class="evento__imagen">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Jueves 26 de Octubre del 2023</p>
+
+                        <h3 class="evento__nombre">Ideas de negocios</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="Imagen del autor">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Juan Pablo de la torre Váldez</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div> <!-- .evento -->
+            <div class="evento">
+                <a href="meeti.html">
+                    <img src="build/img/imagen2.jpg" alt="Imagen del evento" class="evento__imagen">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Lunes 30 de Octubre del 2023</p>
+
+                        <h3 class="evento__nombre">Bitcoin y otras cripto</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil1.jpg" alt="Imagen del autor">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Juan Pablo de la torre Váldez</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div> <!-- .evento -->
+            <div class="evento">
+                <a href="meeti.html">
+                    <img src="build/img/imagen3.jpg" alt="Imagen del evento" class="evento__imagen">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Viernes 1 de Noviembre del 2023</p>
+
+                        <h3 class="evento__nombre">Pizza: paso a paso</h3>
+
+                        <div class="evento__autor">
+                            <div class="evento__autor-imagen">
+                                <img src="build/img/perfil2.jpg" alt="Imagen del autor">
+                            </div>
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Josué Pérez</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div> <!-- .evento -->
+        </div>
+    </main>
 </body>
 
 </html>
