--- a/index.html
+++ b/index.html
@@ -123,6 +123,61 @@
             </div> <!-- .evento -->
         </div>
     </main>
+
+    <section class="categorias">
+        <h2 class="categorias__heading">Categorías</h2>
+
+        <ul class="categorias__grid contenedor">
+            <li class="categoria">
+                <img src="build/img/categoria_1.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Programación</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_2.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Diseño UX y UI</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_3.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Negocios</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_4.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Ropa y Moda</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_5.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Ejercicio y Bienestar</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_6.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Fotografía</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_7.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Comida</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_8.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Diseño interior</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_9.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Café</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_10.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Cine</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_11.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Libros</p>
+            </li>
+            <li class="categoria">
+                <img src="build/img/categoria_12.jpg" alt="Imagen de la categoría" class="categoria__imagen">
+                <p class="categoria__nombre">Emprendimiento</p>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
