feat: Add groups

--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
             </li>
         </ul>
     </section>
+
+    <section class="grupos">
+        <div class="grupos__grid contenedor">
+            <div class="grupos__bloque">
+                <h3 class="grupos__heading">Crea un grupo</h3>
+                <p class="grupos__texto">Comparte lo que te gusta o tu pasión con los demás. Crear tu propio
+                    grupo y eventos, hoy mismo sin ningún costo.
+                </p>
+            </div>
+            <div class="grupos__bloque">
+                <h3 class="grupos__heading">Únete a un grupo</h3>
+                <p class="grupos__texto">Conoce personas con tus mismo gustos y pasiones. Únete a un grupo existente o
+                    asistea próximos eventos
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
