--- a/index.html
+++ b/index.html
@@ -195,6 +195,16 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer contenedor">
+        <nav class="navegacion">
+            <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+            <a href="#" class="navegacion__enlace">Iniciar sesión</a>
+            <a href="#" class="navegacion__enlace">Registrarse</a>
+        </nav>
+
+        <p class="footer__copyright">Todos los derechos reservados. Meeti</p>
+    </footer>
 </body>
 
 </html>
