--- a/meeti.html
+++ b/meeti.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,68 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900|Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
-<body>
 
+<body>
+    <header class="header contenedor">
+        <div class="header__logo">
+            <a href="index.html">
+                <img src="build/img/logo.png" alt="Logo Meeti">
+            </a>
+        </div>
+        <nav class="navegacion">
+            <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+            <a href="#" class="navegacion__enlace">Iniciar sesión</a>
+            <a href="#" class="navegacion__enlace">Registrarse</a>
+        </nav>
+    </header>
+    <main class="meeti contenedor">
+        <h1 class="meeti__nombre">Headless Wordpress con Next.js</h1>
+        <div class="meeti__grid">
+            <section class="meeti__contenido">
+                <img src="build/img/meeti.jpg" alt="Imagen del meeti" class="meeti__imagen">
+
+                <p class="meeti__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo officia eos tempore velit provident
+                    maiores vel sunt similique aliquid veniam, eaque repudiandae blanditiis corrupti deserunt nihil
+                    soluta laborum eveniet ab?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia quis,
+                    sequi, at iure omnis dolore harum explicabo atque, eveniet voluptatibus corrupti optio! Illo
+                    incidunt laudantium consequatur eveniet non dolores nihil.
+                </p>
+                <p class="meeti__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo officia eos tempore velit provident
+                    maiores vel sunt similique aliquid veniam, eaque repudiandae blanditiis corrupti deserunt nihil
+                    soluta laborum eveniet ab?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia quis,
+                    sequi, at iure omnis dolore harum explicabo atque, eveniet voluptatibus corrupti optio! Illo
+                    incidunt laudantium consequatur eveniet non dolores nihil.
+                </p>
+            </section>
+            <aside class="sidebar">
+                <img src="build/img/mapa.jpg" alt="Mapa Meeti" class="sidebar__mapa">
+
+                <div class="sidebar__informacion">
+                    <h3 class="sidebar__heading">Información Meeti</h3>
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Fecha:</span> 30 de Diciembre del 2023
+                    </p>
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Hora:</span> 20:30
+                    </p>
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Ubicación:</span> Av. Vallarta 3033
+                    </p>
+                </div>
+            </aside>
+        </div>
+    </main>
+    <footer class="footer contenedor">
+        <nav class="navegacion">
+            <a href="#" class="navegacion__enlace navegacion__enlace--crear">Crear Grupo</a>
+            <a href="#" class="navegacion__enlace">Iniciar sesión</a>
+            <a href="#" class="navegacion__enlace">Registrarse</a>
+        </nav>
+
+        <p class="footer__copyright">Todos los derechos reservados. Meeti</p>
+    </footer>
 </body>
+
 </html>
